<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dream_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DreamDetailFragment">


    <TextView
        android:id="@+id/dream_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:text="@string/dream_title_label"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/dream_deferred_checkbox"
        app:layout_constraintStart_toEndOf="@+id/dream_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dream_title_text"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:hint="@string/dream_title_text"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dream_deferred_checkbox"
        app:layout_constraintEnd_toEndOf="@+id/dream_deferred_checkbox"
        app:layout_constraintStart_toEndOf="@+id/dream_photo"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_label" />

    <CheckBox
        android:id="@+id/dream_fulfilled_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/dream_fulfilled_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/dream_deferred_checkbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_photo" />

    <CheckBox
        android:id="@+id/dream_deferred_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/dream_deferred_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dream_fulfilled_checkbox"
        app:layout_constraintTop_toTopOf="@+id/dream_fulfilled_checkbox" />

    <TextView
        android:id="@+id/dream_entries_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_entries_label"
        app:layout_constraintTop_toBottomOf="@+id/dream_fulfilled_checkbox"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dream_entry_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_reflection_button"
        app:layout_constraintTop_toBottomOf="@+id/dream_entries_label"
        tools:context=".DreamDetailFragment"
        tools:layout_editor_absoluteX="10dp"></androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/dream_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="dream_title_label" />


</androidx.constraintlayout.widget.ConstraintLayout>